<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">



        <TextView
            android:id="@+id/tv_daya_operasi_label"
            android:text="@string/daya_operasi"
            style="@style/tv_simpan_data_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_daya_operasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/daya_operasi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_daya_operasi_label"/>


        <TextView
            android:id="@+id/tv_alat_ukur_label"
            android:text="@string/alat_ukur"
            style="@style/tv_simpan_data_label"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_daya_operasi"/>

        <TextView
            android:id="@+id/tv_alat_ukur"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/blue"
            android:text="@string/alat_ukur"
            app:layout_constraintTop_toBottomOf="@+id/tv_alat_ukur_label"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_petugas_label"
            android:text="@string/petugas"
            style="@style/tv_simpan_data_label"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alat_ukur"/>

        <TextView
            android:id="@+id/tv_petugas"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/blue"
            android:text="@string/petugas"
            app:layout_constraintTop_toBottomOf="@+id/tv_petugas_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/tv_petugas" />

        <TextView
            android:id="@+id/tv_tanggal"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tanggal"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />



    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>
