<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lokasi_dan_data"
    android:padding="20dp"
    android:id="@+id/constraintLayout">

    <TextView
        android:id="@+id/tv_lokasi"
        style="@style/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lokasi"
        android:layout_marginTop="5dp">


        <TextView
            android:id="@+id/tv_1"
            style="@style/tv_data_lokasi"
            android:layout_marginEnd="50dp"/>

        <TextView
            android:id="@+id/tv_2"
            style="@style/tv_data_lokasi"/>

        <TextView
            android:id="@+id/tv_3"
            style="@style/tv_data_lokasi"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:id="@+id/tv_4"
            style="@style/tv_data_lokasi"/>

        <TextView
            android:id="@+id/tv_5"
            style="@style/tv_data_lokasi"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:id="@+id/tv_6"
            style="@style/tv_data_lokasi"
            />

        <TextView
            android:id="@+id/tv_7"
            style="@style/tv_data_lokasi"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:id="@+id/tv_8"
            style="@style/tv_data_lokasi"
            />

        <TextView
            android:id="@+id/tv_9"
            style="@style/tv_data_lokasi"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:id="@+id/tv_10"
            style="@style/tv_data_lokasi"
            />

    </GridLayout>

    <TextView
        android:id="@+id/tv_tindakan_label"
        style="@style/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tindakan"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"/>

    <TextView
        android:id="@+id/tv_tindakan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tindakan_label"/>

    <Button
        android:id="@+id/bt_upload"
        style="@style/bt_style"
        android:text="@string/upload"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tindakan"/>

</androidx.constraintlayout.widget.ConstraintLayout>